--- a/settings.yaml
+++ b/settings.yaml
@@ -1,7 +1,11 @@
-periodic_time: 30
-target_device:
-  - type: 10
-    number: 8
+periodic_requests:
+  - device_type: 10
+    device_id: 8
+    periodic_time: 30
+    prio: 208
+    datapoints:
+      - betriebswahl_lueftung
+
 datapoints:
   - name: betriebswahl_lueftung
     function_group: 50
